--- a/css/style.css
+++ b/css/style.css
@@ -2997,28 +2997,28 @@ section {
     .home_section_02 {
         margin-top: 250px;
         background-color:transparent;
-        z-index: 0;
+        z-index: unset;
     }
     .home_section_03 {
         padding: 2rem;
         margin-top: 250px;
         background-color: transparent;
-        z-index: 0;
+        z-index: unset;
     }
     .home_section_04 {
         margin-top: 250px;
         background-color:transparent;
-        z-index: 0;
+        z-index: unset;
     }
     .home_section_05 {
         margin-top: 250px;
         background-color:transparent;
-        z-index: 0;
+        z-index: unset;
     }
     .home_section_06 {
         margin-top: 250px;
         background-color:transparent;
-        z-index: 0;
+        z-index: unset;
     }
     .home_bg_02_wrapper {
         display: block;
